@@ -1,3 +1,8 @@
+2013/11/12 (version 1.15)
+
+- Active tasks are shown with bold font in the search dialog.
+
+
 2013/11/08 (version 1.14)
 
 - Long notes now have a vertical scroll-bar and don't extend
